syntax = "proto3";

package agent;

option go_package = "github.com/Codesmith28/CloudAI/proto/pb";

service MasterAgent {
    // Agent requests cluster state
    rpc FetchClusterState(Empty) returns (ClusterState);

    // Agent sends AI-based task assignments
    rpc SubmitAssignments(TaskAssignments) returns (AgentAck);
}

message Empty {}

message AgentAck {
    bool success = 1;
    string message = 2;
}

message ClusterState {
    repeated AgentWorkerInfo workers = 1;
    repeated TaskInfo pending_tasks = 2;
}

message AgentWorkerInfo {
    string worker_id = 1;
    double cpu_available = 2;
    double memory_available = 3;
    double gpu_available = 4;
    string status = 5; // active/inactive
}

message TaskInfo {
    string task_id = 1;
    double req_cpu = 2;
    double req_memory = 3;
    double req_gpu = 4;
    string task_type = 5; // Task type: cpu-light, cpu-heavy, memory-heavy, gpu-inference, gpu-training, mixed
}

message TaskAssignments {
    repeated Assignment assignments = 1;
}

message Assignment {
    string task_id = 1;
    string worker_id = 2;
}
